src/main/java/com/example/shortudy/global/error/exception/EmailAlreadyExistsException.java
package com.example.shortudy.global.error.exception;

public class EmailAlreadyExistsException extends RuntimeException {
    public EmailAlreadyExistsException(String message) {
        super(message);
    }
}
